@@ -2,6 +2,8 @@ Summary of important user-visible changes for Windows 1.3.1+
 ------------------------------------------------------------
  ** added winopen function
 
+ ** added conversion of double and char arrays to octave types
+
 Summary of important user-visible changes for Windows 1.3.1
 ------------------------------------------------------------
   ** updated configure files for 5.0 octave function changes
